crates/ty_python_semantic/resources/mdtest/snapshots/attributes.md_-_Attributes_-_Invalid_access_to_at…_(5457445ffed43a87).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: attributes.md - Attributes - Invalid access to attribute
mdtest path: crates/ty_python_semantic/resources/mdtest/attributes.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Foo:
 2 |     x: int
 3 | 
 4 |     def method(self):
 5 |         # error: [unresolved-reference] "Name `x` used when not defined"
 6 |         y = x
 7 | class Foo:
 8 |     x: int = 1
 9 | 
10 |     def method(self):
11 |         # error: [unresolved-reference] "Name `x` used when not defined"
12 |         y = x
13 | class Foo:
14 |     def __init__(self):
15 |         self.x = 1
16 | 
17 |     def method(self):
18 |         # error: [unresolved-reference] "Name `x` used when not defined"
19 |         y = x
20 | class Foo:
21 |     def __init__(self):
22 |         self.x = 42
23 | 
24 |     @staticmethod
25 |     def static_method():
26 |         # error: [unresolved-reference] "Name `x` used when not defined"
27 |         y = x
28 | from typing import ClassVar
29 | 
30 | class Foo:
31 |     x: ClassVar[int] = 1
32 | 
33 |     @classmethod
34 |     def class_method(cls):
35 |         # error: [unresolved-reference] "Name `x` used when not defined"
36 |         y = x
37 | class Foo:
38 |     def __init__(self):
39 |         self.x = 42
40 | 
41 |     @classmethod
42 |     def class_method(cls):
43 |         # error: [unresolved-reference] "Name `x` used when not defined"
44 |         y = x
```

# Diagnostics

```
error[unresolved-reference]: Name `x` used when not defined
 --> src/mdtest_snippet.py:6:13
  |
4 |     def method(self):
5 |         # error: [unresolved-reference] "Name `x` used when not defined"
6 |         y = x
  |             ^
7 | class Foo:
8 |     x: int = 1
  |
info: An attribute `x` is available: consider using `self.x`
info: rule `unresolved-reference` is enabled by default

```

```
error[unresolved-reference]: Name `x` used when not defined
  --> src/mdtest_snippet.py:12:13
   |
10 |     def method(self):
11 |         # error: [unresolved-reference] "Name `x` used when not defined"
12 |         y = x
   |             ^
13 | class Foo:
14 |     def __init__(self):
   |
info: An attribute `x` is available: consider using `self.x`
info: rule `unresolved-reference` is enabled by default

```

```
error[unresolved-reference]: Name `x` used when not defined
  --> src/mdtest_snippet.py:19:13
   |
17 |     def method(self):
18 |         # error: [unresolved-reference] "Name `x` used when not defined"
19 |         y = x
   |             ^
20 | class Foo:
21 |     def __init__(self):
   |
info: An attribute `x` is available: consider using `self.x`
info: rule `unresolved-reference` is enabled by default

```

```
error[unresolved-reference]: Name `x` used when not defined
  --> src/mdtest_snippet.py:27:13
   |
25 |     def static_method():
26 |         # error: [unresolved-reference] "Name `x` used when not defined"
27 |         y = x
   |             ^
28 | from typing import ClassVar
   |
info: rule `unresolved-reference` is enabled by default

```

```
error[unresolved-reference]: Name `x` used when not defined
  --> src/mdtest_snippet.py:36:13
   |
34 |     def class_method(cls):
35 |         # error: [unresolved-reference] "Name `x` used when not defined"
36 |         y = x
   |             ^
37 | class Foo:
38 |     def __init__(self):
   |
info: An attribute `x` is available: consider using `cls.x`
info: rule `unresolved-reference` is enabled by default

```

```
error[unresolved-reference]: Name `x` used when not defined
  --> src/mdtest_snippet.py:44:13
   |
42 |     def class_method(cls):
43 |         # error: [unresolved-reference] "Name `x` used when not defined"
44 |         y = x
   |             ^
   |
info: rule `unresolved-reference` is enabled by default

```
